tests/snapshots/cli__rm_local_file_after.snap
---
source: tests/cli.rs
expression: sandbox.local_config_contents()
snapshot_kind: text
---
{
  "commands": {
    "test": "echo local-test"
  }
}
