tests/snapshots/cli__rm_local_file_hint.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"rm\", \"build\"])"
snapshot_kind: text
---
exit code: 1
----- stdout -----
Alias "build" is not defined in <root>/project, but in <root>/project/.taco.json.
Run taco rm build --local to remove it there.
