tests/snapshots/cli__rm_local_missing.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"rm\", \"--local\", \"build\"])"
snapshot_kind: text
---
exit code: 1
----- stdout -----
Alias "build" is not defined in <root>/project/.taco.json.
