tests/snapshots/cli__run_a_command.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"greet\"])"
---
exit code: 0
----- stdout -----
hello
