tests/snapshots/cli__shadowed_user_command_wins.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"print\"])"
---
exit code: 0
----- stdout -----
MY-PRINT
