tests/snapshots/cli__shadowing_add_note.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"add\", \"ls\", \"--\", \"echo\", \"MY-LS\"])"
snapshot_kind: text
---
exit code: 0
----- stdout -----
Aliased "ls" to "echo MY-LS" in <root>/project
Note: "ls" shadows the builtin `taco ls`. Reach the builtin with `taco taco ls`.
