tests/snapshots/cli__typo_builtin_suggestion.snap
---
source: tests/cli.rs
expression: "sandbox.taco(&[\"doctro\"])"
---
exit code: 1
----- stdout -----
Command `doctro` does not exist.

Did you mean taco doctor?
